[package]
name = "wargod"
version = "0.1.0"
authors = ["Philip Woods <elzairthesorcerer@gmail.com>"]

[dependencies]
vulkano               = "^0.7.0"
vulkano-win           = "^0.7.0"
vulkano-shader-derive = "^0.7.0"
winit                 = "^0.7.0"
cgmath                = "0.15"
time                  = "0.1"